tests/semantic/invalid/invalid_not.mc
int value = 1;
bool result = !value;
